[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/DialogBox/Scene/DialogBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Chapter/Ch1/Ch1Scene3.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Chapter/Ch1/EvenCh1Scene3.gd" type="Script" id=3]

[node name="even" type="Node2D"]
script = ExtResource( 3 )

[node name="DialoBox" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 37.3757, 58.733 )

[node name="Scene3" parent="." instance=ExtResource( 2 )]

[node name="Tree1" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -330, 20 )

[node name="Tree2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -1398.49, 2652.9 )

[node name="Tree3" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 2407.85, 613.534 )

[node name="Tree4" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 1137.82, -2249.7 )
